<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main"
    tools:context=".SecondActivity"
    >

    <TextView
        android:id="@+id/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text=""
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <EditText
        android:id="@+id/note"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="500dp"
        android:autofillHints=""
        android:backgroundTint="#000000"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/text"
        android:inputType="textPersonName"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o"
        />

    <Button
        android:id="@+id/numberOne"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/number"
        android:textSize="28sp"
        android:text="@string/number_1"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintVertical_bias="0.002" />

    <Button
        android:id="@+id/numberTwo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/number"
        android:textSize="28sp"
        android:text="@string/number_2"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberThree"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/number"
        android:textSize="28sp"
        android:text="@string/number_3"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/numberOne"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberFour"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="@string/number_4"
        android:textColor="@color/textForNumber"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOne"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberFive"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="@string/number_5"
        android:textColor="@color/textForNumber"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTwo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberSix"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/number"
        android:text="@string/number_6"
        android:textColor="@color/textForNumber"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberThree"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberSeven"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="@string/number_7"
        android:textSize="28sp"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberFour"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberEight"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="@string/number_8"
        android:textSize="28sp"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberFive"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberNine"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/number"
        android:text="@string/number_9"
        android:textSize="28sp"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSix"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberZero"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="@string/number_0"
        android:textSize="28sp"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSeven"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/numberZeroZeroZero"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="@string/number_000"
        android:textSize="28sp"
        android:textColor="@color/textForNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberEight"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberNine"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/backspace"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:gravity="center"
        android:text="@string/zero"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Add_btn"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="@color/number"
        android:text="Добавить"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberZeroZeroZero"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/balance"
        app:layout_constraintEnd_toStartOf="@+id/mainLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/swap" />
</androidx.constraintlayout.widget.ConstraintLayout>